--- a/jx-requirements.yml
+++ b/jx-requirements.yml
@@ -1,38 +1,82 @@
 autoUpdate:
   enabled: false
   schedule: ""
+bootConfigURL: https://github.com/cloudbees/cloudbees-jenkins-x-boot-config.git
 cluster:
-  clusterName: ""
-  environmentGitOwner: ""
-  environmentGitPublic: true
-  project: ""
   azure: {}
+  clusterName: davecjxd10
+  devEnvApprovers:
+  - daveconde
+  environmentGitOwner: daveconde
+  environmentGitPublic: true
+  gitKind: github
+  gitName: github
+  gitServer: https://github.com
+  namespace: jx
+  project: apps-dev-229310
   provider: gke
-  zone: ""
-gitops: true
+  registry: gcr.io
+  zone: europe-west1-b
 environments:
-  - key: dev
-  - key: staging
-  - key: production
+- ingress:
+    domain: 34.78.27.121.nip.io
+    externalDNS: false
+    namespaceSubDomain: -jx.
+    tls:
+      email: ""
+      enabled: false
+      production: false
+  key: dev
+  repository: environment-davecjxd10-dev
+- ingress:
+    domain: ""
+    externalDNS: false
+    namespaceSubDomain: ""
+    tls:
+      email: ""
+      enabled: false
+      production: false
+  key: staging
+  repository: environment-davecjxd10-staging
+- ingress:
+    domain: ""
+    externalDNS: false
+    namespaceSubDomain: ""
+    tls:
+      email: ""
+      enabled: false
+      production: false
+  key: production
+  repository: environment-davecjxd10-production
+gitops: true
 ingress:
-  domain: ""
+  domain: 34.78.27.121.nip.io
   externalDNS: false
+  namespaceSubDomain: -jx.
   tls:
     email: ""
     enabled: false
     production: false
 kaniko: true
+repository: nexus
 secretStorage: vault
 storage:
+  backup:
+    enabled: false
+    url: ""
   logs:
     enabled: true
-    url: ""
+    url: gs://davecjxd10-logs-19e44178-e2c4-4400-905e-c4bcb3e090a0
   reports:
     enabled: true
-    url: ""
+    url: gs://davecjxd10-reports-1cafbb4e-27d9-4913-8c73-4a13379f1738
   repository:
     enabled: true
-    url: ""
+    url: gs://davecjxd10-repository-ec42fdb3-d5e7-4f46-8d1f-06f40531c
+vault: {}
+velero:
+  schedule: ""
+  ttl: ""
 versionStream:
   ref: 2.1.46+cjxd.10
   url: https://github.com/cloudbees/cloudbees-jenkins-x-versions.git
